Залил проект на сервер
Накидал скелет сайта до конца

--- a/src/index.html
+++ b/src/index.html
@@ -119,5 +119,28 @@
 <img src="img/otzivi.png" alt="">
 <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. <br> Quod vitae ad ab sequi alias nobis necessitatibus officia, consequatur, amet fugit.</span>
 <br> <span><b>Михаил,</b> Ген директор ПАО "Газпром" </span>
-</body>
+<div>
+<div><h3>МОИ КОНТАКТЫ</h3></div>
+<div><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae cumque consectetur deserunt sapiente, voluptate amet!</span></div>
+<div><img src="img/geo.png" alt=""> <br>
+<span>Санкт-Петербуг<br> Невский проспект 11</span></div>
+<div><img src="img/mail.png" alt=""> <br>
+<span>info@companyname.com</span></div>
+<div><img src="img/phone.png" alt=""> <br>
+<span>+7 999 999-99-99</span></div>
+<div><h4>ОСТАВЬТЕ МНЕ СООБЩЕНИЕ</h4></div>
+<div><textarea name="Имя" id="" cols="30" rows="1" placeholder="Имя"></textarea>
+<textarea name="Email" id="" cols="30" rows="1" placeholder="Email"></textarea></div>
+<textarea name="Сообщение" id="" cols="64" rows="10" placeholder="Сообщение"></textarea>
+<div><input type="subnit" value="Отправить"></div>
+<div><img src="img/faceboock.png" alt="">
+<img src="img/twiter.png" alt="">
+<img src="img/bool.png" alt="">
+<img src="img/cat.png" alt="">
+<img src="img/inst.png" alt="">
+<img src="img/IN.png" alt=""></div>
+<div><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d37882.204838329926!2d-71.7098822759795!3d42.97582414049096!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89e233e8a9946e0d%3A0x590e6c13b1743f65!2z0J3RjNGOINCR0L7RgdGC0L7QvSwg0J3RjNGOLdCl0Y3QvNC_0YjQuNGAIDAzMDcwLCDQodCo0JA!5e0!3m2!1sru!2sru!4v1641600516206!5m2!1sru!2sru" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe></div>
+<div><span>Copyright © 2021 Андрей Браун. Design by Web</span></div>
+</div>
+    </body>
 </html>
