--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,8 @@
     <meta property="og:title" content="Это моя первая страница">
     
     <title>Андрей Браун - Веб-разработчик</title>
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -129,8 +131,9 @@
 <div><img src="img/phone.png" alt=""> <br>
 <span>+7 999 999-99-99</span></div>
 <div><h4>ОСТАВЬТЕ МНЕ СООБЩЕНИЕ</h4></div>
-<div><textarea name="Имя" id="" cols="30" rows="1" placeholder="Имя"></textarea>
-<textarea name="Email" id="" cols="30" rows="1" placeholder="Email"></textarea></div>
+<div><input type="Name" placeholder="Имя">
+<input type="Email" placeholder="Email"> 
+</div>
 <textarea name="Сообщение" id="" cols="64" rows="10" placeholder="Сообщение"></textarea>
 <div><input type="subnit" value="Отправить"></div>
 <div><img src="img/faceboock.png" alt="">
